# MatrixOS

./: -DSTM32F103xE  .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  .map  AGENT.md  CMakeLists.txt  CopilotJournal-PythonRefactor-2026-04-09.md  InputSystem.cn.md  InputSystem.md  InputSystemRevise1.cn.md  InputSystemRevise1.md  InputSystemRevise2.cn.md  InputSystemRevise2.md  LICENSE  Makefile  MatrixOS.code-workspace  PostInputSystemAction.md  PythonMigrationNotes.md  PythonReenableChecklist.md  PythonRefactorReport.md  PythonRefactorTODO.md  README.md  main.cpp  makefile  sdkconfig  sdkconfig.old  source.mk  tidy-file-list.md  tidy-todo.md
Applications/: Application.cpp  Application.h  CMakeLists.txt
Applications/BootAnimation/: BootAnimation.cpp  BootAnimation.h  CMakeLists.txt
Applications/BootAnimations/: BootAnimation.cpp  BootAnimation.h
Applications/BrightnessControl/: BrightnessControl.cpp  BrightnessControl.h  CMakeLists.txt  UI4pxFloat.h
Applications/Companion/: CMakeLists.txt  Companion.cpp  Companion.h
Applications/CustomControlMap/: Action.h  CMakeLists.txt  CustomControlMap.cpp  CustomControlMap.h  UAD.h  UADapi.cpp  UADloader.cpp  UADruntime.cpp  UILayerControl.h  cb0r_utils.h
Applications/Developer/: CMakeLists.txt  Developer.cpp  Developer.h
Applications/DeveloperApp/: CMakeLists.txt  DeveloperApp.cpp  DeveloperApp.h
Applications/Dice/: CMakeLists.txt  Dice.cpp  Dice.h
Applications/Example/: Example.cpp  Example.h
Applications/Gamepad/: Gamepad.cpp  Gamepad.h  UIDPad.h  UIGamepadAxis.h  UIGamepadKey.h  UIKeyboardKey.h
Applications/Lighting/: BPMTapper.h  CMakeLists.txt  Lighting.cpp  Lighting.h  TemperatureColorPicker.h
Applications/MSC/: CMakeLists.txt  MSC.cpp  MSC.h
Applications/Note/: ArpDirVisualizer.h  Arpeggiator.cpp  Arpeggiator.h  BPMTapper.h  CMakeLists.txt  ChordEffect.cpp  ChordEffect.h  InfDisplay.h  MidiClock.cpp  MidiClock.h  MidiEffect.h  MidiPipeline.cpp  MidiPipeline.h  Note.cpp  Note.h  NoteConfigMigration.cpp  NoteConfigMigration.h  NoteControlBar.cpp  NoteControlBar.h  NoteLatch.cpp  NoteLatch.h  NotePad.cpp  NotePad.h  OctaveShifter.h  RhythmVisualizer.h  ScaleModifier.h  ScaleVisualizer.h  Scales.h  TimedDisplay.h  UnderglowLight.h
Applications/Performance/: CMakeLists.txt
Applications/PolyPlayground/: CMakeLists.txt  PolyOctaveShifter.h  PolyPad.h  PolyPlayground.cpp  PolyPlayground.h
Applications/Python/: CMakeLists.txt  Python.cpp  Python.h  PythonFS.cpp  README.md  micropython-api.md  test_uicomponent.py
Applications/REDACTED/: CMakeLists.txt  REDACTED.cpp  REDACTED.h
Applications/Reversi/: CMakeLists.txt  Reversi.cpp  Reversi.h
Applications/Sequencer/: BPMTapper.h  CMakeLists.txt  ClipLauncher.cpp  ClipLauncher.h  ControlBar.cpp  ControlBar.h  EventDetailView.cpp  EventDetailView.h  MessageDisplay.cpp  MessageDisplay.h  MixerControl.cpp  MixerControl.h  NotePad.cpp  NotePad.h  PatternPad.cpp  PatternPad.h  PatternSelector.cpp  PatternSelector.h  SaveButton.cpp  SaveButton.h  ScaleModifier.cpp  ScaleModifier.h  ScaleSelector.cpp  ScaleSelector.h  ScaleVisualizer.cpp  ScaleVisualizer.h  Scales.h  Sequence.cpp  Sequence.h  SequenceData.cpp  SequenceData.h  SequenceEvent.cpp  SequenceEvent.h  SequenceMeta.cpp  SequenceMeta.h  SequenceVisualizer.cpp  SequenceVisualizer.h  Sequencer.cpp  Sequencer.h  TrackSelector.cpp  (+2 more)
Applications/Setting/: CMakeLists.txt  Setting.cpp  Setting.h
Applications/Shell/: AppLauncherBar.h  AppLauncherBarEditMode.h  AppLauncherPicker.h  AppLauncherPickerEditMode.h  CMakeLists.txt  PythonAppDiscovery.cpp  PythonAppDiscovery.h  Shell.cpp  Shell.h
Applications/Strum/: CMakeLists.txt  Chord.h  RotationRequiredUI.h  Strum.cpp  Strum.h  StrumBar.h  StrumChordVisualizer.h  StrumDurationModifier.h  StrumOctaveShifter.h
Devices/MatrixBlock5/: ApplicationList.txt  CMakeLists.txt  Config.cmake  Family.cpp  Family.h  FreeRTOSConfig.h  MatrixOSConfig.h  family.mk  main.cpp  toolchain-stm32f103.cmake
Devices/Mystrix2/: ApplicationList.txt  CMakeLists.txt  Config.cmake  Family.cpp  Family.h  MatrixOSConfig.h  family.mk  sdkconfig.development  sdkconfig.release
Devices/MystrixSIL/: ApplicationList.txt  CMakeLists.txt  Config.cmake  Device.cpp  Family.h  HostIO.cpp  HostIO.h  HostStub.cpp  MatrixOSConfig.h  MidiHost.cpp  family.mk
OS/: CMakeLists.txt  MatrixOS.h  main.cpp
OS/Commands/: CMakeLists.txt  CommandHandler.cpp  CommandHandler.h  CommandSpecs.h
OS/FS/: CMakeLists.txt  FS.cpp  FS.h  diskio.cpp
OS/FileSystem/: CMakeLists.txt  File.cpp  File.h  FileSystem.cpp  FileSystem.h  FileSystemStub.cpp  diskio.cpp
OS/Framework/: CMakeLists.txt  Framework.h  KeyScanState.cpp  KeyScanState.h
OS/HID/: CMakeLists.txt  Gamepad.cpp  HID.cpp  HID.h  HIDSpecs.h  Keyboard.cpp  RawHID.cpp
OS/Input/: CMakeLists.txt  Input.cpp  Input.h
OS/KeyPad/: CMakeLists.txt  KeyPad.cpp  KeyPad.h  cmake_install.cmake
OS/LED/: LED.cpp  LED.h
OS/Logging/: Logging.cpp
OS/MIDI/: CMakeLists.txt  MIDI.cpp  MIDI.h
OS/NVS/: CMakeLists.txt  NVS.cpp
OS/Storage/: CMakeLists.txt  StorageMutex.cpp  StorageMutex.h
OS/System/: Parameters.h  ReleaseConfig.h  System.cpp  System.h  UserVariables.h
OS/UI/: UI.cpp  UI.h  UICallback.h  UIComponents.h  UIUtilities.h
OS/USB/: CDC.cpp  CMakeLists.txt  HID.cpp  MIDI.cpp  MSC.cpp  USB.cpp  USB.h  USBStub.cpp
applications/: Application.cpp  Application.h  Applications.h  CMakeLists.txt  RegisterApplication.h  SystemApplications.h  UserApplications.h
applications/BootAnimation/: BootAnimation.cpp  BootAnimation.h
applications/BootAnimations/: BootAnimation.cpp  BootAnimation.h
applications/BrightnessControl/: BrightnessControl.cpp  BrightnessControl.h  UI4pxFloat.h  UI4pxNumberWithColorFunc.h  UILEDPartitionSelector.h  UITwoToneSelector.h
applications/Companion/: Companion.cpp  Companion.h
applications/CustomControlMap/: Action.h  CustomControlMap.cpp  CustomControlMap.h  UAD.h  UADapi.cpp  (+5 more)
core/: CMakeLists.txt  readme.txt
devices/: CMakeLists.txt  Device.h
framework/: CMakeLists.txt
os/: CMakeLists.txt  MatrixOS.h  main.cpp
(+1314 files in other folders)
